--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,18 @@
 * {
   box-sizing: border-box;
-}
-body {
   margin: 0;
   padding: 0;
-  background-color: #f2f2f2;
+}
+
+.root {
+  margin-top: 70px;
+}
+
+
+section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
