--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,22 +1,24 @@
 .root {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  height: 400px;
-
-  margin-bottom: 20px;
-  border-radius: 15px;
-  padding: 13px 0;
-  box-shadow: 10px 5px 10px #0059ff;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 330px;
+    height: 400px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    padding: 13px 0;
+    box-shadow: 8px 5px 10px 3px #0059ff;
+    background-color: rgb( 240, 243, 244 );
 }
   
   .image {
-    width: 60%;
+    width: 80%;
+    height: 50%;
   }
   
   .info {
+    width: 100%;
     text-align: center;
     padding: 10px;
   }
