--- a/src/ui/typography/title.css
+++ b/src/ui/typography/title.css
@@ -1,4 +1,6 @@
 .title {
+  width: 100%;
+  text-align: center;
   font-size: 32px;
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -7,17 +9,11 @@
 .text {
   text-align: center;
   font-size: 22px;
-  font-weight: 700;
   margin-bottom: 20px;
   color: #000;
-  
-
 }
 
-
-  
 .textMap {
-  font-size: 16px;
-  font-weight: 500;
-  margin: 10px 0;
+  font-size: 18px;
+  margin: 10px;
 }
